Add operation logs

--- a/web/views/public/layout.html
+++ b/web/views/public/layout.html
@@ -90,6 +90,10 @@
                     <a href="{{.web_base_url}}/index/file"><i class="fa fa-briefcase fa-lg"></i>
                     <span class="nav-label" langtag="scheme-file"></span></a>
                 </li>
+                <li class="{{if eq "operation" .menu}}active{{end}}">
+                <a href="{{.web_base_url}}/operation/list"><i class="fa fa-save fa-lg"></i>
+                    <span class="nav-label" langtag="scheme-operation"></span></a>
+                </li>
                 <li class="{{if eq "help" .menu}}active{{end}}">
                     <a href="https://ehang.io/nps/documents" target="_blank"><i class="fa fa-lightbulb fa-lg"></i>
                     <span class="nav-label" langtag="word-help"></span></a>
